workshop/deployment/intelligent-agriculture-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ia-classification
  labels:
    app: ia-classification
    app.kubernetes.io/component: ia-classification
    app.kubernetes.io/instance: ia-classification
    app.kubernetes.io/name: ia-classification
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-classification
      app.kubernetes.io/component: ia-classification
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ia-classification
        app.kubernetes.io/component: ia-classification
    spec:
      containers:
        - name: ia-classification
          image: >-
            quay.io/rh-aiservices-bu/intelligent-agriculture-classification:0.0.5
          resources:
            limits:
              cpu: 150m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 200Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: ia-classification
  labels:
    app: ia-classification
    app.kubernetes.io/component: ia-classification
    app.kubernetes.io/instance: ia-classification
    app.kubernetes.io/name: ia-classification
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: ia-classification
    app.kubernetes.io/component: ia-classification
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ia-classification
  labels:
    app: ia-classification
    app.kubernetes.io/component: ia-classification
    app.kubernetes.io/instance: ia-classification
    app.kubernetes.io/name: ia-classification
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  to:
    kind: Service
    name: ia-classification
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
  wildcardPolicy: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ia-pathservice
  labels:
    app: ia-pathservice
    app.kubernetes.io/component: ia-pathservice
    app.kubernetes.io/instance: ia-pathservice
    app.kubernetes.io/name: ia-pathservice
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-pathservice
      app.kubernetes.io/component: ia-pathservice
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ia-pathservice
        app.kubernetes.io/component: ia-pathservice
    spec:
      containers:
        - name: ia-pathservice
          image: >-
            quay.io/rh-aiservices-bu/intelligent-agriculture-pathservice:0.0.3
          resources:
            limits:
              cpu: '2'
              memory: 600Mi
            requests:
              cpu: 400m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: ia-pathservice
  labels:
    app: ia-pathservice
    app.kubernetes.io/component: ia-pathservice
    app.kubernetes.io/instance: ia-pathservice
    app.kubernetes.io/name: ia-pathservice
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: ia-pathservice
    app.kubernetes.io/component: ia-pathservice
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ia-pathservice
  labels:
    app: ia-pathservice
    app.kubernetes.io/component: ia-pathservice
    app.kubernetes.io/instance: ia-pathservice
    app.kubernetes.io/name: ia-pathservice
    app.kubernetes.io/part-of: intelligent-agriculture
spec:
  to:
    kind: Service
    name: ia-pathservice
    weight: 100
  port:
    targetPort: 5000-tcp
  tls:
    termination: edge
  wildcardPolicy: None
